language update  refs #3430

--- a/lang/da.json
+++ b/lang/da.json
@@ -274,6 +274,7 @@
         "NotValid": "%s er ikke gyldig",
         "NSeconds": "%s sekunder",
         "NumberOfVisits": "Antal besøg",
+        "NUsers": "%s brugere",
         "NVisits": "%s besøg",
         "Ok": "OK",
         "OneAction": "1 handling",
