--- a/lang/ja.json
+++ b/lang/ja.json
@@ -145,6 +145,7 @@
         "Error": "エラー",
         "ErrorRequest": "おっと ! ...リクエスト中に問題がありました。おそらくサーバに一時的な問題が発生しているか、データ量が多過ぎるレポートをリクエストした可能性があります。もう一度お試しください。このエラーが繰り返し表示される場合は、%scontact your Piwik dministrator%s",
         "EvolutionOverPeriod": "一定期間の推移",
+        "EvolutionSummaryGeneric": "%4$s の %3$s と比較した %1$s の %2$s 。展開: %5$s",
         "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "ユーザーは、スーパーユーザーもしくはユーザー '%s' それ自身のいずれかである必要があります。",
         "ExceptionConfigurationFileNotFound": "設定ファイル {%s} が見つかりませんでした",
         "ExceptionDatabaseVersion": "%1$s のバージョンが %2$s ですが、Piwik には少なくとも %3$s が必要となります。",
@@ -355,6 +356,7 @@
         "Seconds": "%s 秒",
         "SeeAll": "すべてを見る",
         "SeeTheOfficialDocumentationForMoreInformation": "詳細については、%s公式ドキュメント%sを参照してください。",
+        "SeeThisFaq": "%1$s この faq %2$s を参照してください。",
         "Segment": "セグメント",
         "SelectYesIfYouWantToSendEmailsViaServer": "ローカルの mail() 関数の代わりにメールサーバー経由でメールを送信したい場合は、\"はい\" を選択します",
         "Settings": "システムの構成",
