--- a/lang/pl.json
+++ b/lang/pl.json
@@ -22,6 +22,7 @@
         "Broken": "Uszkodzony",
         "BrokenDownReportDocumentation": "Dzieli się on na różne raporty, które są prezentowane w Wykresy na dolnej stronie. Możesz powiększyć wykresy klikając na raporcie, który chcesz zobaczyć.",
         "Cancel": "Anuluj",
+        "CannotUnzipFile": "Nie można rozpakować pliku %1$s: %2$s",
         "ChangePassword": "Zmień hasło",
         "ChooseDate": "Zakres dat",
         "ChooseLanguage": "Wybierz język",
@@ -179,6 +180,7 @@
         "GraphHelp": "Więcej informacji na temat wyświetlania grafik znajdziesz na stronach Piwik.",
         "HelloUser": "Witaj, %s!",
         "Help": "Pomoc",
+        "HelpTranslatePiwik": "Może chciałbyś %1$spomóc nam ulepszać Piwik tłumaczenia%2$s?",
         "Hide": "ukryj",
         "HoursMinutes": "%1$s godzin %2$s min",
         "Id": "Nr",
@@ -191,11 +193,13 @@
         "JsTrackingTag": "Kod śledzący w JavaScript",
         "Language": "Język",
         "LastDays": "w czasie ostatnich %s dni (włączając dzisiejszy)",
+        "LastDaysShort": "Ostatnie %s dni",
         "LayoutDirection": "ltr",
         "Live": "Na żywo",
         "Loading": "Ładowanie...",
         "LoadingData": "Ładowanie danych...",
         "LoadingPopover": "Ładowanie %s...",
+        "LoadingPopoverFor": "Ładowanie %s",
         "Locale": "pl_PL.UTF-8",
         "Logout": "Wylogowanie",
         "LongDay_1": "Poniedziałek",
@@ -287,6 +291,7 @@
         "Password": "Hasło",
         "Period": "Okres",
         "Piechart": "Wykres kołowy",
+        "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s jest dostępny. Prosimy powiadomić%2$sPiwik administratora%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "Piwik %1$s jest dostępna. %2$sWykonaj aktualizację!%3$s (zobacz %4$szmiany%5$s).",
         "PleaseSpecifyValue": "Proszę określić parametr dla '%s'.",
         "PleaseUpdatePiwik": "Prosimy o aktualizację oprogramowania Piwik",
@@ -311,6 +316,7 @@
         "Remove": "Usuń",
         "Report": "Raport",
         "ReportGeneratedFrom": "Ten raport został wygenerowany na podstawie dany z %s.",
+        "ReportRatioTooltip": "%1$s \"reprezentuje%2$s z%3$s%4$s z%5$s.",
         "Reports": "Raporty",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "Raporty dnia dzisiejszego (oraz inne w zakresie dat z dniem dzisiejszym włącznie) będą przetwarzane co każde",
         "ReportsWillBeProcessedAtMostEveryHour": "Raporty zostaną przetwarzane najwyżej co godzinę.",
@@ -368,6 +374,7 @@
         "TimeOnPage": "Czas na stronie",
         "Today": "dzisiaj",
         "Total": "Ogólnie",
+        "TotalRatioTooltip": "To jest %1$s wszystkich %2$s %3$s.",
         "TotalRevenue": "Przychody ogółem",
         "TotalVisitsPageviewsRevenue": "(Ogółem: %s wizyt, %s wyświetleń stron, %s dochód)",
         "TransitionsRowActionTooltipTitle": "Otwarte przejścia",
@@ -406,6 +413,7 @@
         "WeeklyReports": "Raporty tygodniowe",
         "WellDone": "Dobra robota!",
         "Widgets": "Interfejs widżetów",
+        "XComparedToY": "%1$s w stosunku do %2$s",
         "XFromY": "%1$s z %2$s",
         "YearlyReport": "rocznie",
         "YearlyReports": "Raporty roczne",
