--- a/lang/sv.json
+++ b/lang/sv.json
@@ -140,6 +140,7 @@
         "EncryptedSmtpTransport": "Ange kryptering för transportlagret som krävs för din SMTP-server.",
         "EnglishLanguageName": "Swedish",
         "Error": "Fel",
+        "ErrorRequest": "Hoppsan! Ett fel inträffade. Detta kan ha orsakats av ett temporärt serverfel, eller också innehöll rapporten du försökte skapa för mycket data. Vänligen försök igen. Återupprepas felet så %skontakta din Piwik-administratör%s för hjälp.",
         "EvolutionOverPeriod": "Utveckling under perioden",
         "EvolutionSummaryGeneric": "%1$s i %2$s jämfört med %3$s i %4$s. Utveckling: %5$s",
         "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "Den här användaren måste vara antingen Superanvändaren eller '%s' användaren.",
@@ -301,6 +302,7 @@
         "Password": "Lösenord",
         "Period": "Period",
         "Piechart": "Cirkeldiagram",
+        "PiwikIsACollaborativeProjectYouCanContributeAndDonate": "%1$sPiwik%2$s är ett samarbetsprojekt av %7$sPiwik teamet%8$som består av medlemmar och även bidragsgivare från hela världen. Om du gillar Piwik, så kan du hjälpa till: läs mer om %3$sHur du hjälper till med Piwik%4$s, eller %5$sdonera nu%6$s för att hjälpa till att finansiera Piwik 3.0!",
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s finns tillgänglig. Vänligen informera din %2$sPiwik administratör%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "Piwik %1$s är tillgänglig. %2$sVänligen uppdatera nu!%3$s (se %4$sförändringar%5$s).",
         "PleaseSpecifyValue": "Var vänlig och ange ett värde för '%s'.",
