--- a/plugins/CoreAdminHome/lang/cs.json
+++ b/plugins/CoreAdminHome/lang/cs.json
@@ -8,6 +8,7 @@
         "ClickHereToOptOut": "Klikněte zde pro vyloučení.",
         "CustomLogoFeedbackInfo": "Pokud přizpůsobíte logo Piwiku, možná by vás zajímalo, jak skrýt odkaz %s v horním menu, Pokud to chcete provést, zakažte plugin zpětné vazby na stránce %sSpravovat zásuvné moduly%s.",
         "CustomLogoHelpText": "Můžete přizpůsobit logo Piwiku, které bude zobrazeno v uživatelském rozhraní a v e-mailových hlášeních.",
+        "DevelopmentProcess": "Přestože náš %sproces vývoje%s zahrnuje tisíce automatizovaných testů, beta testeři hrají klíčovou roli v naší politice nevýskytu chyb.",
         "EmailServerSettings": "Nastavení e-mailového serveru",
         "FaviconUpload": "Vyberte favicon, kterou chcete nahrát",
         "FileUploadDisabled": "Nahrávání souborů je zakázáno v konfiguraci PHP. Pokud chcete nahrát svoje vlastní logo, nastavte %s v souboru php.ini a restartujte webový server.",
@@ -19,10 +20,12 @@
         "ImageTrackingLink": "Odkaz pro sledování obrázkem",
         "ImportingServerLogs": "Důležitá serverová hlášení.",
         "ImportingServerLogsDesc": "Alternativou ke sledování návštěvníků pomocí javascriptu nebo obrázku je neustálý import logu web serveru. Více informací najdeve v dokumentaci %1$sanalýzy log souborů%2$s.",
+        "InvalidPluginsWarning": "Následující zásuvné moduly nejsou kompatibilní s %1$s a nemohly být načteny %2$s.",
         "InvalidPluginsYouCanUninstall": "Tyto zásuvné moduly můžete aktualizovat nebo odinstalovat na stránce %1$ssprávy zásuvných modulů%2$s.",
         "JavaScriptTracking": "Sledování javascriptem",
         "JSTracking_CampaignKwdParam": "Klíčové slovo kampaně",
         "JSTracking_CampaignNameParam": "Název kampaně",
+        "JSTracking_CodeNote": "Ujistěte se, že je následující kód na každé stránce před tagem %1$s.",
         "JSTracking_CustomCampaignQueryParam": "Pro jméno kampaně a klíčové slovo použít vlastní parametry dotazu",
         "JSTracking_CustomCampaignQueryParamDesc": "Poznámka: %1$sPiwik automaticky detekuje parametry pro Google analitics.%2$s",
         "JSTracking_DisableCookies": "Zakázat všechny sledovací cookies",
@@ -31,6 +34,7 @@
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "Poznámka: Serverová detekce volby \"nesledovat\" byla povolena, takže tato volba nebude mít vliv.",
         "JSTracking_EnableDoNotTrackDesc": "Sledovací požadavky nebudou zaslány, pokud si to návštěvníci nepřejí.",
         "JSTracking_GroupPageTitlesByDomain": "Před titulek stránky při sledování připojit doménu stránek",
+        "JSTracking_GroupPageTitlesByDomainDesc1": "Takže, když někdo navštíví stránku 'o nás' na blog.%1$s, bude zaznamenán jako 'O nás \/ blog'. To to je nejjednodušší způsob, jak získat přehled provozu podle subdomén.",
         "JSTracking_MergeAliases": "Ve \"hlášení externích odkazů\" skrýt kliknutí na známé aliasy",
         "JSTracking_MergeAliasesDesc": "Takže kliky na URL aliasů (např. %s) nebudou počítány jako externí odkazy.",
         "JSTracking_MergeSubdomains": "Sledovat všechny návštěvníky na všech subdoménách",
@@ -41,8 +45,12 @@
         "JSTracking_VisitorCustomVarsDesc": "Například se jménem \"Typ\" a hodnotou \"zákazník\".",
         "JSTrackingIntro1": "Návštěvníky vašich stránek můžete sledovat mnoha způsoby. Doporučená metoda je pomocí javascriptu. Aby to bylo možné, každá z vašich stránek musí mít javascriptový kód, který můžete vygenerovat zde,",
         "JSTrackingIntro2": "Až budete mít sledovací javascriptový kód, vložte ho do všech stránek, které mají být Piwikem sledovány.",
+        "JSTrackingIntro3": "Ve velké většině případů (blogy, CMS) můžete použít zásuvný modul, který zajistí technické detaily. Podívejte se na %1$sSeznam integračních zásuvných modulů%2$s. Pokud ještě neexistuje, upravte šablony stránek a umístěte sledovací kód do zápatí.",
+        "JSTrackingIntro4": "Pokud nechcete ke sledování návštěvníků použít javascript, %1$svygenerujte obrázkový sledovací tag níže%2$s.",
+        "JSTrackingIntro5": "Pokud chcete ne jen sledovat zobrazení stránek, podívejte se na %1$sdokumentaci javascriptového sledování%2$s, kde naleznete seznam dostupných funkcí. S použitím těchto funkcí můžete sledovat cíle, vlastní proměnné, objednávky v e-obchodech, opuštěné košíky a mnoho dalšího.",
         "LatestBetaRelease": "Poslední testovací verze",
         "LatestStableRelease": "Poslední stabilní verze",
+        "LogoNotWriteableInstruction": "Pokud chcete místo výcchozího loga použít vlastní, je nutné, abyste měli práva k zápisu adresáře %1$s. Piwik potřebuje práva k zápisu log umístěných v souborech %2$s.",
         "LogoUpload": "Vyberte logo, které chcete nahrát",
         "LogoUploadHelp": "Prosím, nahrajte soubor v jednom z následujících formátů: %s, s minimální výškou %s pixelů.",
         "MenuDevelopment": "Vývoj",
