--- a/plugins/CoreAdminHome/lang/pl.json
+++ b/plugins/CoreAdminHome/lang/pl.json
@@ -34,7 +34,9 @@
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "NOTKA: Serwerowa opcja DoNotTrack została aktywowana, ustawienie które edytujesz nie będzie brane pod uwagę.",
         "JSTracking_EnableDoNotTrackDesc": "Więc żądania śledzenia nie będą wysyłane jeżeli odwiedzający nie życzą sobie śledzenia.",
         "JSTracking_GroupPageTitlesByDomain": "Dodaj domenę do tytułu strony gdy śledzisz",
+        "JSTracking_GroupPageTitlesByDomainDesc1": "Więc jeśli ktoś odwiedzi stronę 'O...' na blogu.%1$s zostanie to zapisane jako 'blog \/ O...'. Jest to najprostszy sposób uzyskania przeglądu ruchu względem sub-domen.",
         "JSTracking_MergeAliases": "W raporcie \"Outlinks\", ukryj kliknięcia na znane aliasy adresów URL",
+        "JSTracking_MergeAliasesDesc": "Kliknięcie na linki do adresów URL (na przykład Alias​​.%s) nie będzie liczony jako \"Outlink\".",
         "JSTracking_MergeSubdomains": "Śledź odwiedzających we wszystkich subdomenach",
         "JSTracking_MergeSubdomainsDesc": "A więc jeśli odwiedzający odwiedza %1$s i %2$s, zostanie policzony jako unikalny odwiedzający.",
         "JSTracking_PageCustomVars": "Śledź własną zmienną dla widoku każdej ze stron",
@@ -44,6 +46,7 @@
         "JSTrackingIntro1": "Możesz śledzić odwiedzających na wiele sposobów. Rekomendowane jest użycie Javascript. By użyć tej metody musisz upewnić się, że każda podstrona ma kod, który możesz wygenerować poniżej.",
         "JSTrackingIntro2": "Kiedy już massz kod śledzenia JavaScript, skopiuj i wklej go na wszystkie strony, które chcesz śledzić w Piwik.",
         "JSTrackingIntro3": "W większości stron, na blogach i CMS itd. możesz używać pluginu, który załatwi stronę techniczną za Ciebie (sprawdź naszą %1$slistę pluginów do integracji z Piwik%2$s). Jeżeli nie ma żadnych pluginów możesz wyedytować swoją stronę i dodać ten kod w pliku \"footer\".",
+        "JSTrackingIntro4": "Jeśli nie chcesz używać JavaScript'u do śledzenia odwiedzających, %1$swygeneruj link śledzenia obrazkiem poniżej%2$s.",
         "JSTrackingIntro5": "Jeśli chcesz zrobić więcej niż śledzić odwiedziny stron, sprawdz listę dostępnych funkcji w %1$sdokumentacji Piwik Śledzenie Javascript%2$s. Przy użyciu tych funkcji możesz śledzić cele, własne zmienne, zamówienia biznesowe i inne.",
         "LatestBetaRelease": "Ostatnie wydanie beta",
         "LatestStableRelease": "Ostatnie stabilne wydanie",
@@ -68,6 +71,7 @@
         "PluginSettingsValueNotAllowed": "Wartość dla pola \"%s\" w pluginie \"%s\" jest niedozwolona",
         "SendPluginUpdateCommunication": "Wyślij mi powiadomienie email gdy pojawi się aktualizacja pluginu",
         "SendPluginUpdateCommunicationHelp": "Email zostanie wysłany do Super Użytkowników gdy pojawi się nowa wersja pluginu.",
+        "StableReleases": "Jeśli Piwik jest ważną częścią firmy , zalecamy użycie najnowszej stabilnej wersji. Jeśli używasz najnowszej wersji beta i znajdziesz błąd lub masz sugestię , prosimy %szobacz tutaj%s .",
         "TrackAGoal": "Śledź cel",
         "TrackingCode": "Kod śledzenia",
         "TrustedHostConfirm": "Czy na pewno chcesz zmienić zaufaną nazwę hosta Piwik?",
