--- a/plugins/CorePluginsAdmin/lang/cs.json
+++ b/plugins/CorePluginsAdmin/lang/cs.json
@@ -18,6 +18,7 @@
         "ByInstallingNewPluginFromMarketplace": "Instalováním %snového zásuvného modulu z obchodu%s",
         "ByInstallingNewThemeFromMarketplace": "Instalováním %snové šablony z obchodu%s",
         "ByWritingOwnPlugin": "%sNapsáním vlastního zásuvného modulu%s",
+        "ByXDevelopers": "Od %s vývojářů",
         "Changelog": "Protokol změn",
         "ChangeSettingsPossible": "Pro tento zásuvný modul můžete změnit %snastavení%s.",
         "CorePluginTooltip": "Jaderné zásuvné moduly nemají verzi, protože jsou distribuovány s Piwikem.",
@@ -33,6 +34,7 @@
         "History": "Historie",
         "Inactive": "Zakázán",
         "InfoPluginUpdateIsRecommended": "Aktualizujte vaše zásuvné moduly nyní, abyste mohli využít všechna vylepšení.",
+        "InfoThemeIsUsedByOtherUsersAsWell": "Poznámka: Ostatní %1$suživatelé registrovaní v tomto Piwiku rovněž používají tuto šablonu %2$s.",
         "InfoThemeUpdateIsRecommended": "Aktualizujte vaše šablony a užívejte si poslední verzi.",
         "InstallingPlugin": "Instalování %s",
         "InstallNewPlugins": "Instalovat nové zásuvné moduly",
