--- a/plugins/CorePluginsAdmin/lang/pl.json
+++ b/plugins/CorePluginsAdmin/lang/pl.json
@@ -23,6 +23,7 @@
         "Developer": "Deweloper",
         "DoMoreContactPiwikAdmins": "Aby zainstalować nowy plugin lub nową skórę, skontaktuj się z administratorami Piwik'a.",
         "DownloadAndInstallPluginsFromMarketplace": "Możesz automatycznie pobrać i zainstalować nowe Plugin'y z %sMarketplace%s.",
+        "EmailToEnquireUpdatedVersion": "Proszę napiac do %1$s i zapytać o zaktualizowanie wersji %2$s.",
         "EnjoyAnotherLookAndFeelOfThemes": "Wypróbuj inny wygląd i odczucia",
         "FeaturedPlugin": "Wyróżniony plugin",
         "GetEarlyAccessForPaidPlugins": "Uwaga: wszystkie pluginy są obecnie dostępne za darmo; w przyszłości uruchomimy w Sklepie Płatne Pluginy (%sskontaktuj się%s dla wczesnego dostępu).",
@@ -72,6 +73,7 @@
         "StepDownloadingPluginFromMarketplace": "Pobieranie wtyczki ze Sklepu",
         "StepDownloadingThemeFromMarketplace": "Pobieranie szablonu ze Sklepu",
         "StepPluginSuccessfullyInstalled": "Wtyczka %1$s %2$s została pomyślnie zainstalowana.",
+        "StepPluginSuccessfullyUpdated": "Wtyczka została %1$s %2$s zaaktualizowana.",
         "StepReplaceExistingPlugin": "Zastępowanie istniejącego pluginu",
         "StepReplaceExistingTheme": "Zastępowania obecnego motywu",
         "StepThemeSuccessfullyInstalled": "Pomyślnie zainstalowano szablon %1$s %2$s.",
