--- a/plugins/CorePluginsAdmin/lang/sr.json
+++ b/plugins/CorePluginsAdmin/lang/sr.json
@@ -29,6 +29,7 @@
         "EmailToEnquireUpdatedVersion": "Molimo vas da pošaljete mejl na %1$s i da zatražite novu verziju %2$s.",
         "EnjoyAnotherLookAndFeelOfThemes": "Uživajte u novom izgledu",
         "FeaturedPlugin": "Istaknuti dodatak",
+        "GetEarlyAccessForPaidPlugins": "Svi dodaci su u ovom trenutku dostupni potpuno besplatno; u budućnosti ćemo na Marketu omogućiti i dodatke koji se plaćaju (%skontaktirajte na%s za rani pristup).",
         "GetNewFunctionality": "Obezbedite nove funkcionalnosti",
         "History": "Istorijat",
         "Inactive": "Neaktivno",
