--- a/plugins/CorePluginsAdmin/lang/sv.json
+++ b/plugins/CorePluginsAdmin/lang/sv.json
@@ -15,7 +15,9 @@
         "BeCarefulUsingPlugins": "Plugin som inte är gjorda av Piwiks team bör användas med försiktighet: vi utvärderar dem inte.",
         "BeCarefulUsingThemes": "Teman som inte gjorts av Piwik bör användas med försiktighet då vi inte utvärderar dessa.",
         "ByDesigningOwnTheme": "Genom att %sdesigna dina egna teman%s",
+        "ByInstallingNewPluginFromMarketplace": "Genom att %sinstallera ett nytt plugin från butiken%s",
         "ByInstallingNewThemeFromMarketplace": "Genom att %sinstallera ett nytt tema från butiken%s",
+        "ByWritingOwnPlugin": "Genom att %sskriva dina egna plugin%s",
         "ByXDevelopers": "av %s utvecklare",
         "Changelog": "Logg över förändring",
         "ChangeSettingsPossible": "Du kan ändra %sinställningar%s för det här pluginet.",
@@ -44,6 +46,7 @@
         "Marketplace": "Annonsplats",
         "MarketplaceSellPluginSubject": "Butik- Sälj Plugin",
         "MenuPlatform": "Plattform",
+        "MissingRequirementsNotice": "Uppdatera %1$s och %2$s till en nyare version, %1$s %3$s är begärda.",
         "NoPluginsFound": "Inga plugin hittade",
         "NotAllowedToBrowseMarketplacePlugins": "Du kan titta igenom listan med plugin som kan installeras för att skräddarsy eller utöka din Piwik plattform. Var vänlig och kontakta din administratör om du vill installera något av de plugin du hittar.",
         "NotAllowedToBrowseMarketplaceThemes": "Du kan leta i listan efter teman som kan installeras för att skräddarsy din Piwik plattform. Kontakta din administratör så kan denne installera temat åt dig.",
@@ -52,6 +55,7 @@
         "NumDownloadsLatestVersion": "Sista versionen: %s Nedladdningar",
         "NumUpdatesAvailable": "%s uppdatering(s) tillgänglig",
         "OrByUploadingAPlugin": "Eller genom att %sladda upp ett plugin%s",
+        "OrByUploadingATheme": "eller genom att %sladda upp ett tema%s",
         "Origin": "Ursprung",
         "OriginCore": "Kärna",
         "OriginThirdParty": "Tredje-part",
