--- a/plugins/CorePluginsAdmin/lang/tr.json
+++ b/plugins/CorePluginsAdmin/lang/tr.json
@@ -32,6 +32,7 @@
         "Marketplace": "Pazaryeri",
         "MarketplaceSellPluginSubject": "Pazaryeri - Eklenti Sat",
         "MenuPlatform": "Platform",
+        "MissingRequirementsNotice": "Lütfen %1$s'ı %2$s'a güncelleyin, %1$s %3$s gerekli.",
         "NoPluginsFound": "Eklenti bulunamadı",
         "NoThemesFound": "Tema bulunamadı",
         "NoZipFileSelected": "Lütfen bir ZIP dosyası seçin.",
@@ -44,6 +45,7 @@
         "PluginKeywords": "Anahtar Kelimeler",
         "PluginsManagement": "Eklenti Yönetimi",
         "PluginUpdateAvailable": "Şuanda %s versiyonunu kullanıyorsunuz ve yeni %s versiyon mevcut.",
+        "PluginVersionInfo": "%2$s den %1$s e",
         "PluginWebsite": "Eklenti Sitesi",
         "Screenshots": "Ekran Görüntüleri",
         "SortByAlpha": "alfa",
