--- a/plugins/Feedback/lang/de.json
+++ b/plugins/Feedback/lang/de.json
@@ -8,6 +8,7 @@
         "LearnWaysToParticipate": "Lernen Sie alle Möglichkeiten kennen, wie Sie %s uns unterstützen können%s",
         "ManuallySendEmailTo": "Senden Sie Ihre Nachricht manuell an",
         "PluginDescription": "Senden Sie Ihr Feedback an das Piwik-Team. Teilen Sie uns Ihre Ideen, Anforderungen und Wünsche mit!",
+        "PrivacyClaim": "Piwik respektiert Ihre %1$sPrivatsphäre%2$s und gibt Ihnen volle Kontrolle über Ihre Daten.",
         "RateFeatureLeaveMessageDislike": "Es tut uns leid zu hören, dass es Ihnen nicht gefällt! Bitte teilen Sie uns mit, wie wir es verbessern können.",
         "RateFeatureLeaveMessageLike": "Wir sind froh, dass Sie es mögen! Bitte teilen Sie uns mit, was sie am meisten mögen oder Sie eine Idee für eine neue Funktion haben.",
         "RateFeatureSendFeedbackInformation": "Ihre Piwik-Plattform wird uns (dem Piwik Team) eine E-Mail (inklusiver Ihrer E-Mail-Adresse) senden, damit wir mit Ihnen in Kontakt treten könne, sollten Sie Fragen haben.",
