--- a/plugins/Feedback/lang/sr.json
+++ b/plugins/Feedback/lang/sr.json
@@ -3,6 +3,7 @@
         "ContactThePiwikTeam": "Kontaktirajte Piwik tim!",
         "DoYouHaveBugReportOrFeatureRequest": "Da li želite da prijavite grešku u programu ili imate neku želju?",
         "GetInTouch": "Zahvaljujemo vam na interesovanju, mi uvek pročitamo sve poruke. Možda želite da podelite sa nama poslovnu ponudu, unajmite Piwik konsultanta, da nam ispričate uspešnu priču ili jednostavno da nas pozdravite!",
+        "HowToCreateTicket": "Molimo vas da pročitate preporuke kako se piše dobra %1$sprijava problema%2$s ili %3$szahtev za novom funkcionalnošću%4$s. Nakon toga se %5$sregistrujte ili prijavite%6$s i kreirajte %7$snovi zahtev%8$s.",
         "IWantTo": "Želim da:",
         "LearnWaysToParticipate": "Pogledajte kako sve možete da %s uzmete učešće%s",
         "ManuallySendEmailTo": "Molimo vas da pošaljete poruku na",
