--- a/plugins/Goals/lang/pl.json
+++ b/plugins/Goals/lang/pl.json
@@ -14,8 +14,11 @@
         "ClickOutlink": "kliknij na link do zewnętrznej strony",
         "ColumnAveragePriceDocumentation": "Średni dochód dla tego %s.",
         "ColumnConversionRateDocumentation": "Procent odwiedzin, które wywołało cel %s.",
+        "ColumnConversionRateProductDocumentation": "%s Współczynnikiem konwersji jest liczba zamówień zawierających ten produkt, podzielona przez liczbę odwiedzin na stronie produktu.",
         "ColumnConversions": "Zmiany",
+        "ColumnConversionsDocumentation": "Liczba konwersji na %s.",
         "ColumnPurchasedProductsDocumentation": "Ilość zakupionych produktów jest sumą ilości produktów sprzedawanych we wszystkich zamówień E-commerce.",
+        "ColumnRevenueDocumentation": "Łączne przychody generowane przez %s.",
         "Contains": "zawiera %s",
         "ConversionRate": "%s współczynnik zmian",
         "Conversions": "%s zmian",
@@ -46,6 +49,7 @@
         "GoalX": "Trafienie %s",
         "HelpOneConversionPerVisit": "Jeżeli strona pasująca do tego trafienia jest odświeżana lub wyświetlana częściej w trakcie odwiedzin, trafienie będzie śledzić tylko za pierwszym razem, gdy strona była po raz pierwszy wyświetlona w trakcie wizyty.",
         "IsExactly": "dokładnie %s",
+        "LeftInCart": "%s pozostało w koszyku",
         "Manually": "ręcznie",
         "ManuallyTriggeredUsingJavascriptFunction": "Założenie osiągnięcia celu jest ręcznie uruchamiane używając API Javascript z funkcją trackGoal()",
         "MatchesExpression": "odpowiada wyrażeniu %s",
