--- a/plugins/Insights/lang/el.json
+++ b/plugins/Insights/lang/el.json
@@ -23,6 +23,7 @@
         "TitleConsideredInsightsGrowth": "Οι παρακάτω γραμμές έχουν μια αύξηση τουλάχιστον %1$s%% σε σχέση με %2$s.",
         "TitleConsideredMoversAndShakersChanges": "Να λαμβάνονται υπόψη οι μετακινητές μόνο αν αυξηθούν περισσότερο από %1$s%% επισκέψεις ή μειωθούν λιγότερο από %2$s%% επισκέψεις, νέες εγγραφές μόνο αν αυξηθούν περισσότερο από %3$s%% επισκέψεις (%4$s) και χαμένες γραμμές μόνο αν μειωθούν λιγότερο από %5$s%% επισκέψεις (%6$s).",
         "TitleConsideredMoversAndShakersGrowth": "%1$s άλλαξε από %2$s σε %3$s σε σχέση με %4$s. Βάσει αυτού αναμένεται μια ανάπτυξη %5$s%% για κάθε γραμμή.",
+        "TitleRowChangeDetails": "'%1$s' άλλαξε από %2$s (%3$s) σε %4$s (%5$s) %6$s",
         "TitleRowDisappearedDetails": "'%1$s' μειώθηκε κατά %2$s και χάθηκε σε %3$s σε σχέση με %4$s.",
         "TitleRowMoverAndShaker": "Η γραμμή αυτή είχε υψηλότερη επιρροή από το μέσο όρο.",
         "TitleRowNewDetails": "'%1$s' αυξήθηκε κατά %2$s και είναι νέο σε σχέση με %3$s.",
