--- a/plugins/Insights/lang/fr.json
+++ b/plugins/Insights/lang/fr.json
@@ -19,8 +19,10 @@
         "MoversAndShakersWidgetTitle": "Déplaceurs et Shakers",
         "NoResultMatchesCriteria": "Aucune ligne ne correspond aux critères",
         "OverviewWidgetTitle": "Aperçu des idées",
+        "TitleConsideredInsightsChanges": "Les enregistrements ont augmenté ou diminué d'au moins %1$s visites (%2$s%% de %3$s visites totales).",
         "TitleConsideredInsightsGrowth": "Les enregistrements suivants ont une croissance d'au moins %1$s%% comparé à %2$s.",
         "TitleConsideredMoversAndShakersChanges": "Considérés comme étant en évolution uniquement s'ils ont augmenté de plus de %1$s%% visites ou diminué par moins de %2$s%% visites, nouveaux entrants uniquement si augmentées par plus de %3$s%% visites (%4$s), et sortants si diminués par moins de %5$s%% visites (%6$s).",
+        "TitleConsideredMoversAndShakersGrowth": "%1$s a changé de %2$s à %3$s comparé à %4$s. Sur cette base une évolution de %5$s%% de chaque enregistrement est prévue.",
         "TitleRowChangeDetails": "'%1$s' a changé de %2$s (%3$s) à %4$s (%5$s) %6$s.",
         "TitleRowDisappearedDetails": "'%1$s' a diminué de %2$s et disparu en %3$s comparé à %4$s.",
         "TitleRowMoverAndShaker": "Cet enregistrement a un impact supérieur à la moyenne.",
