--- a/plugins/Installation/lang/es.json
+++ b/plugins/Installation/lang/es.json
@@ -19,12 +19,14 @@
         "Email": "email",
         "Extension": "extensión",
         "Filesystem": "Filesystem",
+        "GetInvolved": "Si te gusta lo que ves, puedes %1$sparticipar%2$s.",
         "GoBackAndDefinePrefix": "Vuelve atrás y define un Prefijo para las Tablas de Piwik",
         "HappyAnalysing": "¡Disfruta del análisis!",
         "Installation": "Instalación",
         "InstallationStatus": "Estado de la instalación",
         "InsufficientPrivilegesHelp": "Puedes agregar estos privilegios utilizando una herramienta como phpMyAdmin o ejecutando las consultas SQL correspondientes. Si no sabes cómo hacer ninguna de estas operaciones, por favor solicita asistencia a tu sysadmin para que te conceda estos privilegios.",
         "InsufficientPrivilegesMain": "O no existe la base de datos (y no se podía crear), o el usuario especificado no tiene suficientes privilegios. El usuario de la base de datos debe tener los siguentes privilegios: %s",
+        "JsTagArchivingHelp1": "Para sitios con tráfico medio o elevado se deben efectuar ciertas optimizaciones para ayudar a Piwik a funcionar más rápidamente (como %1$shabilitar archivo automático%2$s).",
         "JSTracking_EndNote": "Nota: Después del proceso de instalación, puedes generar código de seguimiento personalizado en la sección de administración %1$sCódigo de Seguimiento%2$s.",
         "JSTracking_Intro": "Para rastrear su tráfico web con Piwik necesitas asegurarte de que algún código extra fue agregado a cada uno de tus sitios web.",
         "LargePiwikInstances": "Ayuda para las grandes instancias de Piwik",
