--- a/plugins/PrivacyManager/lang/ro.json
+++ b/plugins/PrivacyManager/lang/ro.json
@@ -3,6 +3,7 @@
         "AnonymizeIpDescription": "Selectați \"Da\" dacă doriți Piwik sa nu urmareasca pe deplin adrese IP.",
         "AnonymizeIpInlineHelp": "Ascunde ultimele cifre ale IP-ului vizitatorilor pentru a fi în conformitate cu legile privind protecţia datelor personale.",
         "AnonymizeIpMaskLengtDescription": "Selectați cât de multe bytes al IP-urilor de visitatori ar trebui să fie mascate.",
+        "AnonymizeIpMaskLength": "%s octet(ii)- ex. %s",
         "CannotLockSoDeleteLogActions": "Tabelul de acțiune jurnal nu va fi sters: vă rugăm să se acorde privilegiul LOCK TABLES pentru '%s' utilizatorul MySQL.",
         "ClickHereSettings": "Dă click aici pentru a accesa setările %s.",
         "CurrentDBSize": "Dimensiunea bazei de date curenta",
@@ -53,6 +54,7 @@
         "ReportsDataSavedEstimate": "Mărimea bazei de date",
         "SaveSettingsBeforePurge": "Ați schimbat setările de ștergere a datelor. Vă rugăm să le salvați înainte de a începe o curatare.",
         "SeeAlsoOurOfficialGuidePrivacy": "A se vedea, de asemenea, ghidul nostru oficial: %sWeb Analytics confidențialitate%s",
+        "Teaser": "Pe această pagină, puteți personaliza Piwik pentru a face viața privată în conformitate cu legislațiile existente, prin: %s anonimizarea vizitator IP %s, %s elimina automat busteni de vizitatori vechi din baza de date %s, iar %s oferind un mecanism de opt-out pentru site-ul dvs.%s.",
         "TeaserHeadline": "Setări confidenţialitate",
         "UseAnonymizedIpForVisitEnrichment": "De asemenea, utilizeaza adresele IP anonimime, atunci când se cresc vizitele.",
         "UseAnonymizedIpForVisitEnrichmentNote": "Plugin-uri, cum ar fi Locația geografică prin intermediul IP și furnizor îmbunătățire metadate vizitator. În mod implicit aceste plugin-uri folosesc adresele IP anonimizate. Dacă selectați \"Nu\", atunci adresa IP complet non-anonime va fi folosit în loc, careare mai puțina intimitate, dar are o mai mare acuratețe a datelor.",
