--- a/plugins/UserCountryMap/lang/pl.json
+++ b/plugins/UserCountryMap/lang/pl.json
@@ -8,6 +8,7 @@
         "HoursAgo": "%s godzin temu",
         "map": "mapa",
         "Minutes": "minut",
+        "MinutesAgo": "%s minut temu",
         "None": "Brak",
         "NoVisit": "Brak wizyt",
         "RealTimeMap": "Mapa czasu rzeczywistego",
