--- a/lang/cs.json
+++ b/lang/cs.json
@@ -309,6 +309,7 @@
         "Password": "Heslo",
         "Period": "Období",
         "Piechart": "Koláčový graf",
+        "PiwikIsACollaborativeProjectYouCanContributeAndDonate": "%1$sPiwik%2$s je společný projekt, který je zajištěn členy %7$sPiwik týmu%8$s a mnoha přispěvateli z celého světa. Pokud jste fanouškem Piwiku, můžete se podívat, %3$sjak přispět do Piwiku%4$s, nebo %5$sjak finančně podpořit%6$s vývoj Piwiku 3.0!",
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s je dostupný. Prosím, upozorněte %2$sadministrátora Piwiku%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "Je k dispozici Piwik %1$s. %2$s Prosím aktualizujte jej!%3$s (viz %4$s změny%5$s).",
         "PleaseSpecifyValue": "Prosím zapiště hodnotu pro '%s'.",
