--- a/lang/de.json
+++ b/lang/de.json
@@ -310,6 +310,7 @@
         "Password": "Passwort",
         "Period": "Zeitraum",
         "Piechart": "Kreisdiagramm",
+        "PiwikIsACollaborativeProjectYouCanContributeAndDonate": "%1$s Piwik %2$s ist ein gemeinschaftliches Projekt der %7$s Piwik Team%8$s Mitglieder. Wenn Ihnen Piwik gefällt, können Sie helfen: Finden Sie heraus, %3$s wie Sie Piwik unterstützen können%4$s oder %5$s Spenden Sie jetzt%6$s und unterstützen Sie Piwik 3.0!",
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s ist verfügbar. Bitte benachrichtigen Sie den %2$sPiwik Administrator%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "Piwik %1$s ist verfügbar. %2$s Bitte aktualisieren Sie jetzt!%3$s (siehe %4$s Änderungen%5$s).",
         "PleaseSpecifyValue": "Bitte geben Sie einen Wert für '%s' an.",
