--- a/lang/it.json
+++ b/lang/it.json
@@ -310,6 +310,7 @@
         "Password": "Password",
         "Period": "Periodo",
         "Piechart": "Torta",
+        "PiwikIsACollaborativeProjectYouCanContributeAndDonate": "%1$sPiwik%2$s è un progetto in collaborazione portato a te dai membri del %7$steam di Piwik%8$s e da molti altri collaboratori in tutto il mondo. Se sei un fan di Piwik, puoi aiutare: guarda %3$sCome partecipare a Piwik%4$s, o %5$sdona adesso%6$s per aiutare a finanziare Piwik 3.0!",
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s è disponibile. Avvisa l'%2$samministratore di Piwik%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "E' disponibile la versione %1$s di Piwik. %2$s Aggiorna ora!%3$s (%4$svedi le modifiche%5$s).",
         "PleaseSpecifyValue": "Per favore specifica un valore per '%s'.",
