--- a/plugins/Actions/lang/pt.json
+++ b/plugins/Actions/lang/pt.json
@@ -35,6 +35,7 @@
         "OutlinkDocumentation": "Um outlink é um link que leva o visitante para fora do seu website (para outro domínio).",
         "OutlinksReportDocumentation": "Este relatório mostra uma lista hierárquica de URLs de saída que foram clicados pelos visitantes.",
         "PagesReportDocumentation": "Este relatório contém informações sobre URLs das páginas que foram visitadas. %s A tabela está organizada hierarquicamente, as URLs são exibidas como uma estrutura de pastas.",
+        "PageTitlesReportDocumentation": "Este relatório contém informação relativa aos títulos de páginas que foram visitadas. %s O título de página é a Etiqueta HTML %s que a maioria dos navegadores mostram como título de janela.",
         "PageUrls": "URLs de páginas",
         "PluginDescription": "Relatórios sobre páginas vistas, ligações de saída e downloads. O rastreio de ligações de saída e downloads é automático.",
         "SiteSearchCategories1": "Este relatório lista as Categorias que os visitantes selecionaram quando realizaram uma Pesquisa na sua página.",
