--- a/plugins/CoreAdminHome/lang/sv.json
+++ b/plugins/CoreAdminHome/lang/sv.json
@@ -43,6 +43,8 @@
         "JSTrackingIntro1": "Du kan spåra besöken till din sida på många olika sätt. Det sättet som vi rekommenderar är via JavaScript. För att använda den här metoden behöver du ge varje undersida på din hemsida en JavaScript kod. Du kan hämta den koden här:",
         "JSTrackingIntro2": "När du har JavaScripts spårningskod till din webbsida, kopiera och klistra in det på alla sidor du vill spåra med Piwik.",
         "JSTrackingIntro3": "På de flesta webbsidor, bloggar, CMS, med mera kan du använda ett Plugin som redan finns, ett plugin som sköter det tekniska jobbet åt dig. (Titta i vår %1$slista med plugin som används för att interagera med Piwik%2$s.) Om du inte hittar några plugin kan du redigera din sidas templates och lägga till kod i filen för sidfot.",
+        "JSTrackingIntro4": "Om du inte vill använda JavaScript för att spåra besökare, %1$sgenerera en bild spårningslänk nedan%2$s.",
+        "JSTrackingIntro5": "Om du vill göra mer än att spåra antal sedda sidor, titta på %1$sPiwiks lista av dokumentation för Javascripts Spårning%2$s, där hittar du en lista med tillgängliga funktioner. Använd dessa funktioner för att spåra mål, skräddarsy variabler, e-handel, övergivna korgar med mera.",
         "LatestBetaRelease": "Senaste betaversionen",
         "LatestStableRelease": "Senaste stabila versionen",
         "LogoNotWriteableInstruction": "Om du vill använda din egen logotyp istället för Piwiks logotyp, se till så att det finns skrivrättigheter till denna katalog: %1$s. Piwik behöver skrivrättighet för dina logotyper som lagras i filerna %2$s.",
@@ -65,6 +67,7 @@
         "PluginSettingsValueNotAllowed": "Värdet för det här området \"%s\" i Plugin \"%s\" är inte tillåtet",
         "SendPluginUpdateCommunication": "Skicka mig ett e-postmeddelande när det finns en ny uppdatering för tillägget",
         "SendPluginUpdateCommunicationHelp": "Ett e-postmeddelande kommer att skickas till Administratörerna när det finns en ny uppdatering för ett tillägg",
+        "StableReleases": "Om Piwik är en viktig del av dina affärer, rekommenderar vi dig att använda den senaste versionen. Om du använder den senaste beta versionen och hittar en bugg eller har ett förslag, var vänlig att gå in %shär%s.",
         "TrackAGoal": "Monitorera ett mål",
         "TrackingCode": "Spårningskod",
         "TrustedHostConfirm": "Är du säker på att du vill ändra Piwik's betrodda värdnamn?",
