--- a/plugins/CorePluginsAdmin/lang/de.json
+++ b/plugins/CorePluginsAdmin/lang/de.json
@@ -26,6 +26,7 @@
         "Developer": "Entwickler",
         "DoMoreContactPiwikAdmins": "Um ein neues Plugin oder Theme zu installieren, treten Sie bitte in Kontakt mit Ihren Piwik-Admins.",
         "DownloadAndInstallPluginsFromMarketplace": "Sie können neue Plugins automatisch aus dem %sMarketplace%s herunterladen und installieren.",
+        "EmailToEnquireUpdatedVersion": "Bitte schreiben Sie eine E-Mail and %1$s und fragen Sie nach einer aktualisierten Version von %2$s.",
         "EnjoyAnotherLookAndFeelOfThemes": "Verändern Sie das Erscheinungsbild",
         "FeaturedPlugin": "Top-Plugin",
         "GetEarlyAccessForPaidPlugins": "Hinweis: Derzeit sind alle Plugins kostenlos erhältlich; In Zukunft werden wir auch bezahlte Plugins im Marketplace aktivieren (%sKontaktieren Sie uns%s für vorzeitigen Zugriff).",
