--- a/plugins/Events/lang/sr.json
+++ b/plugins/Events/lang/sr.json
@@ -14,6 +14,7 @@
         "EventsWithValue": "Događaji sa vrednošću",
         "EventsWithValueDocumentation": "Broj događaja u kojima je vrednost postavljena",
         "EventValue": "Vrednost događaja",
+        "EventValueTooltip": "Ukupna vrednost događaja je suma %s događaja sa vrednošću %s između minimum od %s i maksimum od %s",
         "MaxValue": "Maksimalna vrednost",
         "MaxValueDocumentation": "Maksimalna vrednost za ovaj događaj",
         "MinValue": "Minimalna vrednost",
