--- a/plugins/Feedback/lang/pl.json
+++ b/plugins/Feedback/lang/pl.json
@@ -11,10 +11,12 @@
         "RateFeatureLeaveMessageDislike": "Przykro nam słyszeć, że Tobie się nie podoba! Proszę pozwól nam wiedzieć, jak możemy to poprawić.",
         "RateFeatureSendFeedbackInformation": "Twoja platforma Piwik wyśle nam (Ekipa Piwik) wiadomość email (zawierającą twój adres email), dzięki temu będziemy mogli mieć z toba kontakt jeśli miałbyś jakieś pytania.",
         "RateFeatureThankYouTitle": "Dziękujemy za ocenę '%s'!",
+        "RateFeatureTitle": "Czy podoba Ci się '%s' funkcja? Proszę ocenić i zostawić komentarz",
         "SendFeedback": "Wyślij opinię",
         "SpecialRequest": "Czy masz wyjątkowe życzenia, które chcesz przekazać dla ekipy programistów z Piwik?",
         "ThankYou": "Dziękujemy za pomoc, która pozwala uczynić statystyki Piwik jeszcze lepszymi!",
         "TopLinkTooltip": "Powiedz nam co myslisz albo poproś o profesjonalne wsparcie.",
+        "ViewUserGuides": "Naucz się jak skonfigurować Piwik i jak efektywnie analizować twoje dane z naszym %1$spodręcznikiem użytkownika%2$s",
         "VisitTheForums": "Odwiedź %s forum%s",
         "WantToThankConsiderDonating": "Uważasz, że Piwik jest świetny i chcesz nam podziękować?"
     }
