--- a/plugins/Feedback/lang/sv.json
+++ b/plugins/Feedback/lang/sv.json
@@ -7,6 +7,7 @@
         "LearnWaysToParticipate": "Läs om alla sätt du kan %s delta%s",
         "ManuallySendEmailTo": "Vänligen skicka ditt meddelande manuellt till",
         "PluginDescription": "Skicka din feedback till Piwikteamet. Dela med dig av dina idéer och förslag med oss​​!",
+        "PrivacyClaim": "Piwik respekterar din %1$sintegritet%2$s och ger dig full kontroll över din information.",
         "RateFeatureLeaveMessageDislike": "Vi är ledsna över att du inte gillar det! Berätta gärna för oss hur vi kan förbättra Piwik.",
         "RateFeatureLeaveMessageLike": "Vi är glada att du gillar det! Berätta för oss vad du gillar mest med Piwik eller om du har ett förslag på en funktion.",
         "RateFeatureSendFeedbackInformation": "Din Piwik plattform kommer att skicka oss (Piwik teamet) ett e-post (inklusive din e-postadress) så att vi kan komma i kontakt med dig om du har några frågor.",
