--- a/plugins/Live/lang/ja.json
+++ b/plugins/Live/lang/ja.json
@@ -1,5 +1,6 @@
 {
     "Live": {
+        "AbandonedCartSummary": "%1$s%2$s はカート %3$s と %4$s を放棄し、 はアイテム %5$s (総合 %6$s%7$s に値する)を放棄しました。",
         "AveragePageGenerationTime": "この訪問者のロードに、各ページ平均 %1$s かかりました。",
         "CalculatedOverNPageViews": "この訪問者の最終 %1$s ページビューを利用して計算",
         "ClickToViewMoreAboutVisit": "この訪問に関する詳細情報を見るには、クリックしてください。",
@@ -33,6 +34,7 @@
         "VisitorProfile": "ビジターのプロフィール",
         "VisitorsInRealTime": "リアルタイムのビジター",
         "VisitorsLastVisit": "このビジターの最新のビジットは %s 日前です。",
-        "VisitsFrom": "から %1$s%2$s が %3$s を訪問"
+        "VisitsFrom": "から %1$s%2$s が %3$s を訪問",
+        "VisitSummary": "ウェブサイト %3$s で、合計 %1$s%2$s を消費し、%4$s は %6$s 訪問で、%5$s ページ閲覧しました。%7$s"
     }
 }
