--- a/plugins/Live/lang/pl.json
+++ b/plugins/Live/lang/pl.json
@@ -1,6 +1,7 @@
 {
     "Live": {
         "ClickToViewMoreAboutVisit": "Kliknij po więcej informacji o tej wizycie",
+        "EcommerceSummaryConversions": "%1$s%2$s zamówienia na łączną %3$s%4$s, zakupione %5$s elementy.",
         "FirstVisit": "Pierwsza wizyta",
         "GoalType": "Rodzaj",
         "HideMap": "ukryj mapę",
@@ -18,10 +19,12 @@
         "PreviousVisitor": "Poprzedni odwiedzający",
         "Referrer_URL": "Przysyłający adres URL",
         "ShowMap": "Pokaż mapę",
+        "SimpleRealTimeWidget_Message": "%s %s na %s ostatni",
         "ViewVisitorProfile": "Zobacz profil odwiedzającego",
         "VisitedPages": "Odwiedzone strony",
         "VisitorLog": "Log odwiedzających",
         "VisitorProfile": "Profil odwiedzającego",
-        "VisitorsInRealTime": "Odwiedzający w czasie rzeczywistym"
+        "VisitorsInRealTime": "Odwiedzający w czasie rzeczywistym",
+        "VisitorsLastVisit": "Ostatnia wizyta tego gościa była %s dni temu."
     }
 }
