--- a/plugins/MobileMessaging/lang/de.json
+++ b/plugins/MobileMessaging/lang/de.json
@@ -29,6 +29,7 @@
         "Settings_SMSProvider": "SMS-Anbieter",
         "Settings_SuperAdmin": "Einstellungen für Hauptadministrator",
         "Settings_SuspiciousPhoneNumber": "Falls Sie keine Textnachricht erhalten probieren Sie es bitte ohne eine führende 0, z.B.: %s",
+        "Settings_UpdateOrDeleteAccount": "Sie können diesen Zugang auch %saktualisieren%s oder %sentfernen%s.",
         "Settings_ValidatePhoneNumber": "Validieren",
         "Settings_VerificationCodeJustSent": "Wir haben Ihnen eine SMS mit einem Code an diese Nummer geschickt: Bitte geben Sie diesen Code unterhalb ein und klicken auf \"Validieren\".",
         "SettingsMenu": "Mobile Messaging",
