--- a/plugins/SitesManager/lang/ro.json
+++ b/plugins/SitesManager/lang/ro.json
@@ -36,6 +36,7 @@
         "HelpExcludedIps": "Introduceți lista de IP-uri, câte unul pe linie, pe care doriți să excludeți de la urmărită de către Piwik. Aveți posibilitatea să utilizați metacaractere, de ex. %1$s or %2$s",
         "JsTrackingTagHelp": "Aici este codul JavaScript de urmărire pentru a il include pe toate paginile dvs.",
         "KeepURLFragments": "Fragmente de pagină URL de urmărire",
+        "KeepURLFragmentsHelp": "În cazul în care caseta de selectare de mai jos nu este bifata, fragmente din URL-ul paginii (tot dupa %1$s) vor fi eliminate atunci când urmărirea:%2$s vor fi urmărite ca %3$s",
         "KeepURLFragmentsHelp2": "Puteți înlocui, de asemenea, această setare pentru site-urile individuale de mai sus.",
         "KeepURLFragmentsLong": "Păstreaza fragmente din URL-ul paginii, atunci când urmarresti URL-ul paginii",
         "ListOfIpsToBeExcludedOnAllWebsites": "IP-urile de mai jos vor fi excluse de la urmărire pe toate site-urile.",
