--- a/plugins/UserCountry/lang/ro.json
+++ b/plugins/UserCountry/lang/ro.json
@@ -295,6 +295,7 @@
         "country_zw": "Zimbabwe",
         "CurrentLocationIntro": "Conform acestui furnizor, locația curentă este",
         "DefaultLocationProviderDesc1": "Furnizorul de locație implicită ghiceste tara unui vizitator bazat pe limba care o folosesc.",
+        "DefaultLocationProviderDesc2": "Acest lucru nu este foarte precis, astfel încât %1$s noi recomandam instalarea și utilizarea.%2$sGeoIP%3$s%4$s",
         "DefaultLocationProviderExplanation": "Acum folositi locatie implicita de furnizorul l, ceea ce înseamnă că Piwik va ghici locația vizitatorilor bazat pe limba pe care o folosesc. %1$scititi acest%2$s pentru a învăța cum să setați geolocalizarea mai precis.",
         "DistinctCountries": "%s ţări distincte",
         "DownloadingDb": "Se descarcă %s",
@@ -312,6 +313,7 @@
         "GeoIpLocationProviderDesc_Php1": "Acest furnizor de locație este cel mai simplu de instalat, deoarece nu are nevoie de configurare a serverului (ideal pentru shared hosting!). Acesta folosește o bază de date GeoIP și PHP API MaxMind pentru a determina cu exactitate locația vizitatorilor.",
         "GeoIpLocationProviderDesc_Php2": "În cazul în care site-ul dvs. primeste o multime de trafic, ați putea găsi că acest furnizor este prea lent. În acest caz, ar trebui să instalați %1$sPECL extensie%2$ssau %3$smodul server%4$s.",
         "GeoIpLocationProviderDesc_ServerBased1": "Acest furnizor de localizare utilizează modulul GeoIP care a fost instalat în serverul de HTTP. Acest furnizor este rapid și precis, dar %1$scanare poate fi utilizat numai cu urmărirea normală browser.%2$s",
+        "GeoIpLocationProviderDesc_ServerBased2": "Dacă aveți de importat fișierul jurnal sau sa faceti ceva care necesită stabilirea adrese IP, utilizați %1$s de punere în aplicare PECL GeoIP (recomandat)%2$s sau%3$s PHP GeoIP implementarea%4$s.",
         "GeoIpLocationProviderDesc_ServerBasedAnonWarn": "Notă: anonimizare IP nu are nici un efect asupra locațiilor raportate de acest furnizor. Înainte de al utiliza cu anonimizare, IP, asigurați-vă că aceasta nu încalcă legile privind confidențialitatea ar putea fi supuse.",
         "GeoIpLocationProviderNotRecomnended": "Geolocation funcționează, dar nu utilizați unul dintre furnizorii recomandati.",
         "GeoIPNoServerVars": "Piwik nu poate găsi nici un GeoIP %s variabile.",
@@ -338,6 +340,7 @@
         "HowToSetupGeoIPIntro": "Nu pare a avea o configurare exacte Geolocation. Aceasta este o caracteristică utilă și fără ea nu se vor vedea informatii corecte si complete de locație pentru vizitatori. Iată cum puteți începe rapid folosind-o:",
         "HttpServerModule": "Module HTTP Server",
         "InvalidGeoIPUpdatePeriod": "Perioada de valabilitate pentru updater GeoIP:%1$s. Valorile valide sunt %2$s.",
+        "IPurchasedGeoIPDBs": "Am cumparat mai mult de %1$sbaze de date exacte de la MaxMin%2$s și doresc să configurareze actualizări automate.",
         "ISPDatabase": "Baza de date provideri internet",
         "IWantToDownloadFreeGeoIP": "Vreau să descarc gratuit baza de date GeoIP ...",
         "Latitude": "Latitudine",
