--- a/plugins/VisitFrequency/lang/ro.json
+++ b/plugins/VisitFrequency/lang/ro.json
@@ -12,6 +12,7 @@
         "ColumnUniqueReturningVisitors": "Vizitatori unici se reîntorc",
         "PluginDescription": "Rapoarteaza diverse statistici despre reintoarcerea Vizitei față de vizitatorii pentru prima dată.",
         "ReturnActions": "%s actiuni ale vizitatorilor intorsi",
+        "ReturnAverageVisitDuration": "%s Durata medie de vizita pentru retintoacerea vizitelor",
         "ReturnAvgActions": "%s acțiuni pe revenirea vizita",
         "ReturnBounceRate": "%s vizite reîntoarse au sărit (au părăsit site-ul după o singură pagină)",
         "ReturningVisitDocumentation": "O vizită reventoarsa este ( spre deosebire de o nouă vizită) realizate de către cineva care a vizitat site-ul cel puțin o dată înainte.",
